--- a/FaceDetection/examples/examples/examples.vcxproj
+++ b/FaceDetection/examples/examples/examples.vcxproj
@@ -79,8 +79,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>H:\myOpenSource\SeetaFaceEngine-master\3rdparty\include;..\..\include;$(IncludePath)</IncludePath>
-    <LibraryPath>H:\myOpenSource\SeetaFaceEngine-master\3rdparty\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\..\3rdparty\include;..\..\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\3rdparty\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
